# devdump

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
cli/: Cargo.toml
cli/src/: main.rs
server/: .env  Cargo.toml
server/migrations/: 20240122184133_create_users_table.sql
server/src/: email_service.rs  lib.rs  main.rs  uploader.rs  util.rs
server/src/routes/: health_check.rs  mod.rs  upload.rs
