[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "server"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7.4", features = ["multipart", "form"] }
chrono = { version = "0.4.32", features = ["clock"] }
lettre = { version = "0.11.3",default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "rustls-tls", "hostname", "builder"] }
rand = "0.8.5"
redis = { version = "0.24.0", features = ["tokio-comp", "tokio-rustls-comp"] }
serde = { version = "1.0.195", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "migrate", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["limit", "trace", "fs", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }

