[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "server"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.7.4" }
futures = "0.3.30"
lettre = { version = "0.11.3", default-features = false, features = [
  "smtp-transport",
  "tokio1-rustls-tls",
  "rustls-tls",
  "hostname",
  "builder",
] }
libsql = "0.3.3"
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower-http = { version = "0.5.1", features = [
  "limit",
  "trace",
  "fs",
  "timeout",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
